[tool.poetry]
name = "Python Starter"
package-mode = false
version = "0.1.0"
description = "Just the basics"
authors = ["mr-squirrel <hugo.bove89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mlforecast = {extras = ["polars"], version = "^0.13.2"}
polars = "^1.2.1"
plotly = "^5.22.0"
notebook = ">=5.3"
ipywidgets = ">=7.5"
numpy = "1.24.1"
hyperopt = "^0.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
